--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <meta property="og:title" content="facebookTitle" />
+    <meta property="og:description" content="facebookDescription" />
+    <meta property="og:site_name" content="facebookName" />
+    <meta property="og:url" content="facebookUrl" />
+    <meta property="og:image" content="facebookImage" />
   </head>
   <body>
     111
