--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="facebookImage" />
   </head>
   <body>
+    <script src="./main.js"></script>
     111
   </body>
 </html>
