--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <meta property="og:description" content="facebookDescription" />
     <meta property="og:site_name" content="facebookName" />
     <meta property="og:url" content="facebookUrl" />
-    <meta property="og:image" content="facebookImage" />
+    <meta
+      property="og:image"
+      content="https://api.dicebear.com/7.x/miniavs/svg?seed=2"
+    />
   </head>
   <body>
     <script src="./main.js"></script>
