--- a/index-new.html
+++ b/index-new.html
@@ -39,7 +39,7 @@
       type="image/x-icon"
     />
     <!--===== CSS LINK =======-->
-    <link rel="stylesheet" href="assets-new/css/plugins/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets-new/css/custom.css" />
     <link rel="stylesheet" href="assets-new/css/plugins/aos.css" />
     <link rel="stylesheet" href="assets-new/css/plugins/magnific-popup.css" />
     <link rel="stylesheet" href="assets-new/css/plugins/mobile.css" />
@@ -1694,7 +1694,7 @@
       </div>
     </div>
     <!--===== FOOTER AREA ENDS =======-->
-    <link rel="stylesheet" href="/assets-new/css/bot-banner.css" />
+    <link rel="stylesheet" href="assets-new/css/bot-banner.css" />
     <a href="/video-enhancer-ai.html" target="_blank" id="click-banner-bottom">
       <div id="special-lottie"></div>
     </a>
@@ -1740,7 +1740,11 @@
     <script src="/assets-new/js/banner.js"></script>
 
     <!--===== JS SCRIPT LINK =======-->
-    <script src="assets-new/js/plugins/bootstrap.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets-new/js/plugins/aos.js"></script>
     <script src="assets-new/js/plugins/counter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
